--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,21 +2,18 @@
 main:
   - title: "Publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Posts"
+    url: /posts/
     
   - title: "CV"
     url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+
+  - title: "Bookmark"
+    url: /bookmark/
+  
+  - title: "Postcard Gallery"
+    url: /postcard/
+  
+  - title: "About"
+    url: /about/
