--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  #- title: "Publications"
+  #  url: /publications/
         
-  - title: "Posts"
-    url: /posts/
+  - title: "Euromar2025"
+    url: /euromar2025/
     
   - title: "CV"
     url: /cv/
 
-  - title: "Bookmark"
-    url: /bookmark/
+  #- title: "Bookmark"
+  #  url: /bookmark/
   
-  - title: "Postcard Gallery"
-    url: /postcard/
+  #- title: "Postcard Gallery"
+  #  url: /postcard/
   
   - title: "About"
     url: /about/
